alignmnt fix

--- a/src/components/Appointment/Appointmentmain.css
+++ b/src/components/Appointment/Appointmentmain.css
@@ -44,7 +44,6 @@ div.card_user_appointment {
   background: hsla(0, 0%, 98.4%, 0.3411764705882353);
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
-  top: 100px;
 }
 [type="date"] {
   background: #fff
@@ -250,7 +249,6 @@ button.select_btn_next_appointmain:hover{
     -webkit-backdrop-filter: blur(4px);
     backdrop-filter: blur(4px);
     margin: 5%;
-    top: 100px;
   }
   /* left side  */
   input.appointmentdate_subtitle {
@@ -441,7 +439,6 @@ button.select_btn_next_appointmain:hover{
     width: 70%;
     height: auto;
     border: none;
-    top: 100px;
   }
   div.appointment_main_container {
     font-family: Roboto;
@@ -635,7 +632,6 @@ button.select_btn_next_appointmain:hover{
     width: 70%;
     height: auto;
     border: none;
-    top: 100px;
   }
   div.appointment_main_container {
     font-family: Roboto;
@@ -860,7 +856,6 @@ button.select_btn_next_appointmain:hover{
     width: 70%;
     height: auto;
     border: none;
-    top: 100px;
   }
   div.appointment_main_container {
     font-family: Roboto;
