--- a/src/components/Menu Package/MenuPkg.css
+++ b/src/components/Menu Package/MenuPkg.css
@@ -22,8 +22,6 @@
 div.menupkg_container_main {
   display: grid;
   place-items: center;
-  /* position: relative;
-  top: 100px; */
 }
 
 div.menuPckg-container {
